--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,14 @@
 name = "scrumcli"
 version = "0.0.1"
 dependencies = [
-    'importlib-metadata; python_version<"3.10"',
+    'importlib-metadata; python_version<"3.10"', 'tomli-w'
 ]
 
 [project.scripts]
-hello="scrumcli.hello:hello"
+"sbl"="scrumcli:sbl_entry"
 
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "mypy", "pytest"]
 build-backend = "setuptools.build_meta"
 
 
