--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,8 @@
 [project]
 name = "scrumcli"
+authors=[
+    {name = "Lachlan Kingsford", email = "lachlan@nerdygentleman.com"},
+]
 version = "0.0.1"
 dependencies = [
     'importlib-metadata; python_version<"3.10"', 'tomli-w'
@@ -12,4 +15,6 @@ dependencies = [
 requires = ["setuptools", "mypy", "pytest"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+exclude = ["scrum", "test"]
 
