--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,18 @@ authors=[
 ]
 version = "0.0.1"
 dependencies = [
-    'importlib-metadata; python_version<"3.10"', 'tomli-w'
+    'importlib-metadata; python_version<"3.11"', 'tomli-w'
 ]
 
 [project.scripts]
 "sbl"="scrummd:sbl_entry"
 
 [build-system]
-requires = ["setuptools", "mypy", "pytest"]
+requires = ["setuptools", "mypy", "pytest", "pylint"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-exclude = ["scrum", "test"]
+exclude = ["scrum", "test", "docs"]
 
+[tool.scrummd]
+strict = true
