--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ testpaths = ["test"]
 
 [tool.scrummd]
 strict = true
+scard_reference_format = "$index [$status]"
 
 [tool.scrummd.fields]
 status = ["Not Fully Defined", "Ready", "In Progress", "In Testing", "Done"]
