cil020 Add validation checker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = ['importlib-metadata; python_version<"3.11"', 'tomli-w']
 "sbl" = "scrummd:sbl_entry"
 "scard" = "scrummd:scard_entry"
 "sbench" = "scrummd:sbench_entry"
+"svalid" = "scrummd:svalid_entry"
 
 [build-system]
 requires = ["setuptools", "mypy", "pytest", "pylint"]
