Set up test runner for github

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "scrummd"
 authors = [{ name = "Lachlan Kingsford", email = "lachlan@nerdygentleman.com" }]
 version = "0.0.1"
-dependencies = ['importlib-metadata; python_version<"3.11"', 'tomli-w']
+dependencies = ['importlib-metadata; python_version<"3.11"']
 
 [project.scripts]
 "sbl" = "scrummd:sbl_entry"
