--- a/.github/workflows/test-pypi-deploy.yml
+++ b/.github/workflows/test-pypi-deploy.yml
@@ -35,6 +35,7 @@ jobs:
         needs:
             - build
         runs-on: ubuntu-latest
+        if: startsWith(github.ref, 'refs/tags/') # only publish to PyPI on tag pushes
 
         environment:
             name: testpypi
