--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,15 @@ readme = "README.md"
 "svalid" = "scrummd:svalid_entry"
 
 [build-system]
-requires = ["setuptools", "mypy", "pytest", "pylint", "setuptools_scm"]
+requires = [
+    "setuptools",
+    "mypy",
+    "pytest",
+    "pylint",
+    "setuptools_scm",
+    "sphinx",
+    "sphinx-argparse",
+]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
