--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ build-backend = "setuptools.build_meta"
 exclude = ["scrum", "test", "docs"]
 
 [tool.setuptools_scm]
+version_file = "scrummd/_version.py"
 
 [tool.pytest.ini_options]
 testpaths = ["test"]
