cli025 Add lots of written doco
Includes:

- Tutorial
- Card reference
- Field reference
- Configuration reference
- Concepts

Would still like for the examples to be automatically generated.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ requires = [
     "setuptools_scm",
     "sphinx",
     "sphinx-argparse",
+    "sphinx-rtd-theme",
 ]
 build-backend = "setuptools.build_meta"
 
