--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,9 @@ testpaths = ["test"]
 [tool.scrummd]
 strict = true
 
+[tool.scrummd.sboard]
+default_group_by = ["status"]
+
 [tool.scrummd.scard]
 reference_format = "$index [$status]"
 
