cli031 Documented sboard

--- a/docs/tutorial_examples/tutorial1.4/scrum.toml
+++ b/docs/tutorial_examples/tutorial1.4/scrum.toml
@@ -1,5 +1,8 @@
 [tool.scrummd]
 strict = true
 
+[tool.scrummd.scard]
+reference_format = "$index - $summary [$status]"
+
 [tool.scrummd.fields]
 severity = ["High", "Medium", "Low"]
