--- a/docs/tutorial_examples/tutorial1.5/scrum.toml
+++ b/docs/tutorial_examples/tutorial1.5/scrum.toml
@@ -1,6 +1,8 @@
 [tool.scrummd]
 strict = true
-scard_reference_format = "$index - $summary [$status]"
+
+[tool.scrummd.scard]
+reference_format = "$index - $summary [$status]"
 
 [tool.scrummd.fields]
 severity = ["High", "Medium", "Low"]
