--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "scrummd"
 authors = [{ name = "Lachlan Kingsford", email = "lachlan@nerdygentleman.com" }]
 dynamic = ["version"]
 requires-python = ">=3.10"
-dependencies = ['tomli; python_version<"3.11"']
+dependencies = ['jinja2~=3.1.6', 'tomli; python_version<"3.11"']
 readme = "README.md"
 
 [project.scripts]
@@ -41,9 +41,6 @@ strict = true
 
 [tool.scrummd.sboard]
 default_group_by = ["status"]
-
-[tool.scrummd.scard]
-reference_format = "$index [$status]"
 
 [tool.scrummd.fields]
 status = [
