--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "scrummd"
 authors = [{ name = "Lachlan Kingsford", email = "lachlan@nerdygentleman.com" }]
 dynamic = ["version"]
 requires-python = ">=3.10"
-dependencies = ['tomli; python_version<"3.11"']
+dependencies = ['jinja2~=3.1.6', 'tomli; python_version<"3.11"']
 readme = "README.md"
 
 [project.scripts]
