--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,64 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Python Debugger: Current File with Arguments",
-            "type": "debugpy",
-            "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal",
-            "args": "${command:pickArgs}"
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Python: Launch swrite with args",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/scrummd/swrite.py",  
+      "cwd": "${workspaceFolder}",
+      "env": {
+        "PYTHONPATH": "${workspaceFolder}"
+      },
+      "python": "${workspaceFolder}/env/bin/python",       
+      "args": [
+        "--someflag",
+        "value",
+        "--other-flag",
+        "another_value"
+      ],
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "Python: Debug current file (no args)",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "cwd": "${workspaceFolder}",
+      "python": "${workspaceFolder}/env/bin/python",
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "Python: Debug current file with args",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "cwd": "${workspaceFolder}",
+      "python": "${workspaceFolder}/env/bin/python",
+      "args": [
+        "--flag-for-current-file",
+        "some_value"
+      ],
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "Python: pytest (with args)",
+      "type": "python",
+      "request": "launch",
+      "module": "pytest",
+      "justMyCode": false,
+      "args": [
+        "${input:pytestArgs}"
+      ],
+      "console": "integratedTerminal"
+    }
+  ],
+  "inputs": [
+    {
+      "id": "pytestArgs",
+      "type": "promptString",
+      "description": "Enter pytest arguments (e.g. tests/test_file.py::TestClass::test_func -k keyword -v)",
+      "default": ""
+    }
+  ]
 }
